(WN_S2GO): fix small issues and adding Home tests